# sqs-batch-client

./: README.md  noxfile.py  pyproject.toml  setup.cfg
src/sqs_batch_client/: __init__.py
tests/: conftest.py  test_sqs_batch_client.py
